Project V-8: Intégration de locomotive JS + test fonction changeant le body de couleur

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -288,4 +288,5 @@ footer a{
 }
 
 /* Absolute ==> peut-être placé n'importe ou dans les frontières de son éléments parent
-==> parent == élément en relative, si pas, par défaut le body */
+==> parent == élément en relative, si pas, par défaut le body 
+https://locomotivemtl.github.io/locomotive-scroll/ */
