--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -234,6 +234,7 @@ header h2{ /* Touche tous les h2, seulement dans le header */
 
 .skills .appear{
     text-align: center;
+    transition-delay: 0.6s;
 }
 
 .skills p{
@@ -260,6 +261,21 @@ header h2{ /* Touche tous les h2, seulement dans le header */
     width: 60vw;
     max-width: 600px;
     margin: 50px 5vw;
+}
+
+.project::before{
+    content: "";
+    position: absolute;
+    height: 110%;
+    width: 100%;
+    top: -3px;
+    background: #fefeff;
+    transition: width 1s ease-out;
+    transition-delay: 0.85s;
+}
+
+.project.is-inview::before{
+    width: 0;
 }
 
 #p2{
@@ -312,6 +328,14 @@ footer p{
     font-size: calc(1rem + 2vw);
     margin: 25px 0;
     text-align: center; /* tac */
+}
+
+#l2{
+    transition-delay: 1.2s;
+}
+
+#l3{
+    transition-delay: 1.6s;
 }
 
 footer a{
